@@ -19,13 +19,13 @@
 package org.apache.streampipes.wrapper.standalone.function;
 
 import org.apache.streampipes.client.StreamPipesClient;
+import org.apache.streampipes.extensions.api.pe.routing.SpOutputCollector;
 import org.apache.streampipes.extensions.management.client.StreamPipesClientResolver;
 import org.apache.streampipes.model.SpDataStream;
-import org.apache.streampipes.wrapper.routing.SpOutputCollector;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 public class FunctionContextGenerator {
 
@@ -60,6 +60,7 @@ public class FunctionContextGenerator {
     return this.streamIds
         .stream()
         .map(streamId -> client.streams().get(streamId))
-        .collect(Collectors.toList());
+        .flatMap(Optional::stream)
+        .toList();
   }
 }
